--- a/index.html
+++ b/index.html
@@ -35,23 +35,6 @@
         <li class="nav-item">
           <a class="nav-link" href="pages/projects.html">Projects</a>
         </li>
-        <?php /*
-        <li class="nav-item">
-          <a class="nav-link" href="pages/musicPage.html">Happy Time</a>
-        </li>
-
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown link
-          </a>
-          
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-      	*/ ?>
       </ul>
     </div>
   </div>
@@ -82,11 +65,9 @@
 		<div class="row">
 			<div class="col-md-6">
 				<p class="promo-title"> Keep in Touch!</p>
-				<p>Sign up here for updates and info about what I’m working on!</p>
+				<p>Contact Me in social media!</p>
 
 			</div>
-
-			<div class="col-md-6" style="margin-top: 30px;">
 				
 			</div>
 		</div>
@@ -103,7 +84,7 @@
 				<a target="_blank" href="mailto:elia8hazim@gmail.com"><img src="images/gmail.png"></a>
 			</div>
 		</div>
-	<pre>© 2022 - 2023 Eng. Elias Hazim</pre>
+	<pre>© 2022 - 2024 Eng. Elias Hazim</pre>
 	</section>
 </footer>
 </body>
