--- a/pages/Projects/EliSis.html
+++ b/pages/Projects/EliSis.html
@@ -34,7 +34,7 @@
 
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="../../index.php">Home</a>
+          <a class="nav-link" aria-current="page" href="../../index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="../cv.html">CV</a>
@@ -65,7 +65,7 @@
   		<br><br><br><br>
   			<h2 id="txtThemeTitle">EliSis</h2>
   			<p id="txtwhite" style="text-align: center;">Point of sale, billing and inventory control system - sistema de punto de venta, facturacion y control de inventario. </p>
-  			<p id="txtwhite" style="text-align: center;">(2021 - 2022)</p>
+  			<p id="txtwhite" style="text-align: center;">(2021 - 2024)</p>
   			<p id="txtwhite" style="text-align: center;">Venezuela, Vargas ,Caribe , Inversiones Don Franco 2020 C.A.</p>
   			
   			<hr>
@@ -177,7 +177,7 @@
 			  </a>
 			</div>
 			<br>
-			<p id="txtwhite">© 2022 Eng. Elias Hazim</p>
+			<p id="txtwhite">© 2021 - 2024 Eng. Elias Hazim</p>
 			<br>
 
   				
