--- a/pages/Projects/FaluEscape.html
+++ b/pages/Projects/FaluEscape.html
@@ -34,7 +34,7 @@
 
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="../../index.php">Home</a>
+          <a class="nav-link" aria-current="page" href="../../index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="../cv.html">CV</a>
@@ -66,7 +66,6 @@
   			<h2 id="txtThemeTitle">FaluEscape</h2>
   			<p id="txtwhite" style="text-align: center;">Adventure game</p>
   			<p id="txtwhite" style="text-align: center;">(2022)</p>
-  			<p id="txtwhite" style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.AllousSoft.FaluEscape">Play Store Link</a></p>
   			
   			<hr>
   			
