--- a/pages/Projects/CarRacing2D.html
+++ b/pages/Projects/CarRacing2D.html
@@ -34,7 +34,7 @@
 
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="../../index.php">Home</a>
+          <a class="nav-link" aria-current="page" href="../../index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="../cv.html">CV</a>
@@ -128,7 +128,7 @@
 			  </a>
 			</div>
 			<br>
-			<p id="txtwhite">© 2022 Eng. Elias Hazim</p>
+			<p id="txtwhite">© 2020 Eng. Elias Hazim</p>
 			<br>
 
   				
