--- a/pages/error.html
+++ b/pages/error.html
@@ -29,7 +29,7 @@
 
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="../index.php">Home</a>
+          <a class="nav-link" aria-current="page" href="../index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="projects.html">Projects</a>
