--- a/pages/projects.html
+++ b/pages/projects.html
@@ -29,7 +29,7 @@
 
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="../index.php">Home</a>
+          <a class="nav-link" aria-current="page" href="../index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="cv.html">CV</a>
@@ -117,16 +117,6 @@
                   </div>
                 </div>
                 
-                <div class="col">
-                  <div class="card shadow-sm">
-                    <center><img src="../images/logo.png" width="70%" height="50%" style="margin-top: 15px;"></center>
-                    <div class="card-body">
-                      <hr>
-                      <a href="projects/AllouSis.html" class="card-text"> - AllouSis (Personal website "allousis.unaux.com") (2022)</a><hr>
-                      <p class="card-text">using Html - CSS - PHP - Bootstrap</p>
-                    </div>
-                  </div>
-                </div>
 
                 <div class="col">
                   <div class="card shadow-sm">
